--- a/src/scss/account.scss
+++ b/src/scss/account.scss
@@ -8,6 +8,9 @@
 }
 .account-col-content {
   padding-right: 0;
+  @media only screen and (max-width: 990px) {
+    padding-left: 0;
+  }
 }
 .account-header-1 {
   font-size: 24px;
@@ -80,6 +83,9 @@
   left: 22%;
   transform: translate(-50%, -50%);
   font-size: 64px;
+  @media only screen and (max-width: 990px) {
+    display: none;
+  }
 }
 
 .account-layout-background {
@@ -91,6 +97,9 @@
   left: 50%;
   border-radius: 50%;
   transform: translate(-50%, -50%);
+  @media only screen and (max-width: 990px) {
+    display: none;
+  }
 }
 
 // account my details layout
@@ -188,6 +197,11 @@
   bottom: 5%;
   left: 5%;
   cursor: pointer;
+  @media only screen and (max-width: 990px) {
+    position: relative;
+    bottom: 0;
+    left: 3%;
+  }
 }
 
 .account-signout-icon {
