--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -129,6 +129,10 @@
 .cart-items-checkout {
   margin-left: 1%;
   background-color: $color-gray-light;
+  @media only screen and (max-width: 990px) {
+    margin-left: 0;
+    margin-top: 2%;
+  }
 }
 
 .cart-form-text-color {
