--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -1,20 +1,38 @@
 .hero-logo {
   text-transform: uppercase;
   position: relative;
-  top: 20px;
-  left: 30px;
+  text-align: center;
   color: $color-red-light;
   letter-spacing: 4px;
   font-weight: 400;
+  @media only screen and (max-width: 990px) {
+    position: relative;
+    top: 2px;
+    left: 18px;
+    color: #e95b4e;
+    letter-spacing: 0px;
+    font-weight: 400;
+    font-size: 22px;
+  }
 }
 
 .hero-paragraph {
   text-transform: uppercase;
   position: relative;
-  top: 250px;
-  right: -80px;
+  text-align: center;
+  bottom: -80%;
   color: $color-red-light;
   letter-spacing: 2px;
   font-weight: 600;
   font-size: 25px;
+  @media only screen and (max-width: 990px) {
+    text-align: center;
+    position: relative;
+    bottom: 0px;
+    right: 0px;
+    color: #e95b4e;
+    letter-spacing: 2px;
+    font-weight: 600;
+    font-size: 20px;
+  }
 }
