--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -39,6 +39,9 @@
     color: $color-gray-dark;
     text-decoration: underline;
   }
+  @media only screen and (max-width: 990px) {
+    font-size: 20px;
+  }
 }
 // collections
 
@@ -49,6 +52,9 @@
   background-position: center;
   background-size: cover;
   position: relative;
+  @media only screen and (max-width: 990px) {
+    height: 300px;
+  }
 }
 
 .card-collection-boxname {
@@ -59,6 +65,9 @@
   background-color: black;
   opacity: 0.7;
   filter: blur(1px);
+  @media only screen and (max-width: 990px) {
+    height: 13%;
+  }
 }
 
 .card-collection-text {
@@ -71,4 +80,9 @@
   left: 50%;
   bottom: 2%;
   transform: translate(-50%, -50%);
+  @media only screen and (max-width: 990px) {
+    font-size: 12px;
+    letter-spacing: 0;
+    font-weight: 500;
+  }
 }
