--- a/src/scss/product.scss
+++ b/src/scss/product.scss
@@ -28,6 +28,37 @@
       cursor: pointer;
     }
   }
+  @media only screen and (max-width: 990px) {
+    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 80% 20%;
+    width: 100%;
+    grid-row-gap: 5px;
+    &-div {
+      grid-column: 1;
+      height: 100%;
+    }
+    &-div--2 {
+      grid-column: 1/5;
+      grid-row: 1;
+      height: 100%;
+      &-displayImg {
+        width: 100%;
+        height: 100%;
+        cursor: zoom-in;
+      }
+    }
+
+    &--images {
+      object-fit: cover;
+      width: 90%;
+      max-height: 100%;
+      &:hover {
+        cursor: pointer;
+      }
+    }
+  }
 }
 
 .product-header {
@@ -140,4 +171,26 @@
 }
 .slick-slide > div {
   padding: 0 5px;
+}
+
+@media only screen and (max-width: 990px) {
+  .product-grid-container-div-0 {
+    grid-row: 2;
+    grid-column: 1;
+  }
+  .product-grid-container-div-1 {
+    grid-row: 2;
+    grid-column: 2;
+  }
+  .product-grid-container-div-2 {
+    grid-row: 2;
+    grid-column: 3;
+  }
+  .product-grid-container-div-3 {
+    grid-row: 2;
+    grid-column: 4;
+  }
+  .media-text-center {
+    text-align: center;
+  }
 }
