--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -24,6 +24,13 @@
     letter-spacing: 1px;
     font-weight: 600;
   }
+  @media only screen and (max-width: 990px) {
+    display: flex;
+    align-content: space-between;
+    text-align: center;
+    padding-left: 2%;
+    font-size: 16px;
+  }
 }
 
 .tab-dropdown-custom {
