--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -231,3 +231,9 @@ a#dropdown-custom-2.dropdown-toggle {
   right: -16px;
   font-size: 12px;
 }
+
+.logo {
+  letter-spacing: 0;
+  font-weight: 400;
+  text-transform: uppercase;
+}
