--- a/src/scss/shop.scss
+++ b/src/scss/shop.scss
@@ -1,7 +1,7 @@
 .card-shop {
   width: 100%;
   height: 180px;
-  background-color: brown;
+  background-color: #636160;
   position: relative;
   display: flex;
 }
@@ -40,6 +40,7 @@
   }
   @media only screen and (max-width: 990px) {
     width: 69px;
+    font-size: 12px;
   }
 }
 
