--- a/src/scss/tabs.scss
+++ b/src/scss/tabs.scss
@@ -29,16 +29,20 @@
     align-content: space-between;
     text-align: center;
     padding-left: 2%;
-    font-size: 16px;
+    font-size: 14px;
   }
 }
 
 .tab-dropdown-custom {
   margin-top: -1px;
-  font-size: 20px;
+  font-size: 18px;
   padding: 5px;
   color: $color-gray-light;
   background-color: $color-gray-dark;
+  @media only screen and (max-width: 990px) {
+    text-align: center;
+    font-size: 14px;
+  }
 }
 
 .nav-tabs .nav-item.show .nav-link,
